# universal-llm-telemetry-suite

./: .gitignore  CONCLUSIONS.md  LICENSE  README.md  RESEARCH.md  pyproject.toml  pyrightconfig.json  requirements-apple-silicon.txt  requirements-core.txt  requirements.txt  run_benchmark.sh  setup.sh
llm_bench/: __init__.py  __main__.py  optimizer.py
reports/: optimization_recommendation.json
reports/experiments/: attention_head_importance_20260425_191637.csv  attention_head_importance_20260425_191637.json  entropy_quality_predictor_20260425_220318.csv  entropy_quality_predictor_20260425_220318.json  prompt_routing_20260425_220235.csv  prompt_routing_20260425_220235.json  real_model_analysis_20260425_201739.csv  real_model_analysis_20260425_201739.json  token_confidence_threshold_20260425_191621.csv  token_confidence_threshold_20260425_191621.json
reports/kv_cache/: initial_results.json
results/: master_ledger.csv  production_benchmarks.csv
results/m1_pro/: production_benchmarks.csv  thermal_log.csv
results/reference_benchmarks/rtx_3080_baseline/: production_benchmarks.csv  thermal_log.csv
src/: download_models.py  orchestrator.py  providers.py  sanitize_paths.py  setup_env.py  visualizer.py
src/experiments/: __init__.py  exp_attention_heads.py  exp_entropy_quality.py  exp_real_model.py  exp_routing.py  exp_token_confidence.py  runner.py  visualize.py  visualize_real.py
src/kv_cache_bench/: __init__.py  benchmark.py  policies.py
tests/: test_kv_cache.py
